# JsonPencil

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: json.hpp
src/: json.cpp  main.cpp
